Add client-side notion of authentication

--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -5,12 +5,13 @@
 	<title>Voting app</title>
 </head>
 
-<body>
+<body ng-controller="AppCtrl">
 	<div ng-view></div>
 
 	<script src="/angular.js"></script>
 	<script src="/angular-route.js"></script>
 	<script src="/modules/app.js"></script>
+	<script src="/modules/auth.js"></script>
 	<script src="/modules/polls/polls.js"></script>
 	<script src="/modules/login/login.js"></script>
 </body>
