--- a/client/modules/start.html
+++ b/client/modules/start.html
@@ -1,4 +1,4 @@
 <ul>
-	<li><a href="#/login">Sign in</a></li>
+	<li ng-if="!isAuthenticated()"><a href="#/login">Sign in</a></li>
 	<li><a href="#/polls">Polls</a></li>
 </ul>
