Add poll editing in client side

--- a/client/modules/polls/detail.html
+++ b/client/modules/polls/detail.html
@@ -21,4 +21,5 @@
 		</li>
 	</ul>
 </div>
+<button ng-if="ownsPoll(poll)" ng-click="edit(poll)">Edit</button>
 <button ng-if="ownsPoll(poll)" ng-click="delete(poll)">Delete</button>
