Add twitter share button

--- a/client/modules/polls/detail.html
+++ b/client/modules/polls/detail.html
@@ -23,3 +23,5 @@
 </div>
 <button ng-if="ownsPoll(poll)" ng-click="edit(poll)">Edit</button>
 <button ng-if="ownsPoll(poll)" ng-click="delete(poll)">Delete</button>
+
+<a twitter data-text="Check out this poll" data-url="{{location.absUrl()}}"></a>
