--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -21,5 +21,6 @@
 	<script src="/modules/auth.js"></script>
 	<script src="/modules/polls/polls.js"></script>
 	<script src="/modules/login/login.js"></script>
+	<script src="https://platform.twitter.com/widgets.js"></script>
 </body>
 </html>
