--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -2,6 +2,8 @@
 <html ng-app="app">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/bootstrap.css">
 	<title>Voting app</title>
 </head>
 
