--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -5,15 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/bootstrap.css">
 	<title>Voting app</title>
+	<style>
+body {
+	font-size: 16px;
+}
+	</style>
 </head>
 
 <body ng-controller="AppCtrl">
-	<nav><ul>
-		<li><a href="#/">Home</a></li>
-		<li><a href="#/polls">Polls</a></li>
-		<li ng-if="!isAuthenticated()"><a href="#/login">Sign in</a></li>
-		<li ng-if="isAuthenticated()"><a href="/auth/logout?url={{location.absUrl()}}">Logout</a></li>
-	</ul></nav>
+	<nav class="navbar navbar-default"><div class="container-fluid">
+		<ul class="nav navbar-nav">
+			<li><a href="#/">Home</a></li>
+			<li><a href="#/polls">Polls</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li ng-if="!isAuthenticated()"><a href="#/login">Sign in</a></li>
+			<li ng-if="isAuthenticated()"><a href="/auth/logout?url={{location.absUrl()}}">Logout</a></li>
+		</ul>
+	</div></nav>
 
 	<div ng-view></div>
 
