--- a/client/modules/polls/create.html
+++ b/client/modules/polls/create.html
@@ -1,21 +1,26 @@
-<form>
-	<p>
-		<label for="input-title">Title:</label>
-		<input id="input-title" type="text" ng-model="poll.title">
-	</p>
-	<p>
-		<label for="input-desc">Description:</label><br>
-		<textarea id="input-desc" ng-model="poll.description"></textarea>
-	</p>
-	<!-- items -->
-	<p>Items:<p>
-	<div>
-		<ul>
+<style>
+form {
+	max-width: 700px;
+}
+</style>
+<h3 class="text-center">New poll</h3>
+<form class="center-block">
+	<div class="form-group">
+		<label for="input-title">Title</label>
+		<input id="input-title" type="text" ng-model="poll.title" class="form-control">
+	</div>
+	<div class="form-group">
+		<label for="input-desc">Description</label>
+		<textarea id="input-desc" ng-model="poll.description" class="form-control"></textarea>
+	</div>
+	<div class="form-group">
+		<label for="items">Items</label>
+		<ul id="items" class="list-unstyled">
 			<li ng-repeat="item in poll.items">
-				<input type="text" ng-model="item.text" value="{{item.text}}">
+				<input type="text" ng-model="item.text" value="{{item.text}}" class="form-control">
 			</li>
 		</ul>
-		<button ng-click="poll.items.push({})">Add item</button>
+		<button ng-click="poll.items.push({})" class="btn btn-default">Add item</button>
 	</div>
-	<button ng-click="submit(poll)">Submit</button>
+	<button ng-click="submit(poll)" class="btn btn-primary">Submit</button>
 </form>
