Add GitHub icon

--- a/client/modules/login/login.html
+++ b/client/modules/login/login.html
@@ -5,7 +5,9 @@ main {
 </style>
 <main class="center-block">
 	<p>
-		<a href="/auth/github" class="btn btn-default">Sign in with GitHub</a>
+		<a href="/auth/github" class="btn btn-default">
+			<i class="fa fa-github fa-lg"></i> Sign in with GitHub
+		</a>
 	</p>
 	<form method="post" action="/auth/local">
 		<div class="form-group">
