--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -21,6 +21,7 @@ body {
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-if="!isAuthenticated()"><a href="#/login">Sign in</a></li>
+			<li ng-if="isAuthenticated()"><a href="#/profile">Profile</a></li>
 			<li ng-if="isAuthenticated()"><a href="/auth/logout?url={{location.absUrl()}}">Logout</a></li>
 		</ul>
 	</div></nav>
@@ -32,7 +33,7 @@ body {
 	<script src="/modules/app.js"></script>
 	<script src="/modules/auth.js"></script>
 	<script src="/modules/polls/polls.js"></script>
-	<script src="/modules/login/login.js"></script>
+	<script src="/modules/user/user.js"></script>
 	<script src="https://platform.twitter.com/widgets.js"></script>
 </body>
 </html>
