--- a/client/modules/user/profile.html
+++ b/client/modules/user/profile.html
@@ -5,4 +5,6 @@
 <p ng-if="currentUser().password">
 	Registered with password
 </p>
+
+<button ng-click="deleteUser()" class="btn btn-danger">Delete account</button>
 </main>
