--- a/client/modules/index.html
+++ b/client/modules/index.html
@@ -20,6 +20,7 @@ body {
 			<li><a href="#/polls">Polls</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
+			<li ng-if="!isAuthenticated()"><a href="#/signup">Create account</a></li>
 			<li ng-if="!isAuthenticated()"><a href="#/login">Sign in</a></li>
 			<li ng-if="isAuthenticated()"><a href="#/profile">Profile</a></li>
 			<li ng-if="isAuthenticated()"><a href="/auth/logout?url={{location.absUrl()}}">Logout</a></li>
